# EventProcessingService

./: Cargo.toml  README.md
scripts/: smoke_test.ps1  smoke_test.sh
src/: lib.rs  main.rs
src/domain/: error.rs  event.rs  mod.rs  state.rs
src/http/: extractors.rs  handlers.rs  mod.rs  tests.rs  types.rs
src/service/: idempotency.rs  ingest.rs  mod.rs  processor.rs
src/store/: memory.rs  mod.rs
src/telemetry/: logging.rs  metrics.rs  mod.rs
tests/: http_integration.rs  integration.rs
